@@ -11,7 +11,10 @@ knxd (0.13.0-3) unstable; urgency=medium
     (filters for which this does not make sense will reject this)
   * Filter logging: append the link's name for disambiguation
   * Auto-restart failing interfaces
-  * Queue filter to decouple a driver
+  * "queue" filter to decouple a driver
+  * "pace" filter to slow down transmission
+  * Teach the send-delay option to use the "pace" filter
+    * removed driver specific implementations
 
  -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Feb 2017 10:01:37 +0100
 
